feat: handle notification status update
